groupery all csv support - needs bugfixing

--- a/app/style.css
+++ b/app/style.css
@@ -147,9 +147,9 @@ header h1               {font-family: 'Montserrat', sans-serif;text-align:center
 
 /* >Pickery */
 .pick                    {width:100%;font-family: 'Montserrat', sans-serif;padding:0px 25px;}
-    #all_fields          {width:100%;text-align:center;}
-    #all_fields input    {display:block;margin:0 auto;}
-    #all_fields td,tr,th {border:2px solid black;margin:0;padding:7px;}
+    table          {width:100%;text-align:center;}
+    table input    {display:block;margin:0 auto;}
+    table td,tr,th {border:2px solid black;margin:0;padding:7px;}
     #uploadcsv h3        {width:50%;}
     #uploadcsv           {text-align:center;}
     .pick input          {font-family: 'Montserrat', sans-serif;border:none;}
